[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opyf"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "OpyFlow - Python package for Optical Flow measurements."
readme = "ReadMe.md"
requires-python = ">=3.7"
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Programming Language :: Python :: 3"
    ]
    
[project.urls]
"Homepage" = "https://github.com/groussea/opyflow"
"Bug Tracker" = "https://github.com/groussea/opyflow/issues"
